fix visibility of hover tools BG
simple hot fix to @bbondy @bsclifton

closes #5324

--- a/less/about/newtab.less
+++ b/less/about/newtab.less
@@ -214,7 +214,7 @@ ul {
           max-width: 90%;
           display: flex;
           justify-content: space-between;
-          background-color: @gray25;
+          background-color: rgba(255, 255, 255, 0.5);
           border-radius: @borderRadius;
 
           .topSitesActionBtn {
